--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -517,6 +517,7 @@ ol {
 .footer-section .copyright {
   font-size: 12px;
   color: #979797;
+  opacity: 0;
 }
 
 .social-links {
@@ -674,6 +675,10 @@ ol {
 /* ===========================
   Responsive
 ==============================*/
+.portfolio-item{
+  background-size: contain;
+}
+
 @media only screen and (max-width: 1448px) {
   .home-2.container {
     width: auto;
@@ -683,7 +688,7 @@ ol {
 /* Medium screen : 992px. */
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .portfolio-item {
-    height: 450px;
+    /* height: 450px; */
   }
 }
 
@@ -693,7 +698,7 @@ ol {
     padding: 0 30px;
   }
   .portfolio-item {
-    height: 350px;
+    /* height: 350px; */
   }
 }
 
